--- a/jwgg/src/main/resources/templates/loginHome.html
+++ b/jwgg/src/main/resources/templates/loginHome.html
@@ -20,6 +20,12 @@
       </button>
     </div>
     <div class="col">
+      <button class="w-100 btn btn-secondary btn-lg" type="button"
+              th:onclick="|location.href='@{/champs}'|">
+        추천 챔피언
+      </button>
+    </div>
+    <div class="col">
       <form th:action="@{/logout}" method="post">
         <button class="w-100 btn btn-dark btn-lg" type="submit">
           로그아웃
