#25 - 홈화면으로 이동하는 이미지 추가
이미지 경로를 제대로 설정해줬는데 계속 확인이 되지 않음.
추후 intercepter에 걸리지 않게 설정해서 해결됨
이미지 파일을 모두 지워도 계속 이미지가 보이는 현상이 일어남
추후 웹 브라우저에서 캐시를 지우니 없는 이미지가 보이는 현상이 해결됨

--- a/jwgg/src/main/resources/templates/login/loginForm.html
+++ b/jwgg/src/main/resources/templates/login/loginForm.html
@@ -17,6 +17,8 @@
 <body>
 <div class="container">
     <div class="py-5 text-center">
+        <div th:replace="fragment/header :: copy"></div>
+        <hr class="my-4">
         <h2>로그인</h2>
     </div>
     <form action="item.html" th:action th:object="${loginForm}" method="post">
