--- a/jwgg/src/main/resources/templates/champs/addCounter.html
+++ b/jwgg/src/main/resources/templates/champs/addCounter.html
@@ -19,6 +19,8 @@
 <div class="container">
 
     <div class="py-5 text-center">
+        <div th:replace="fragment/header :: copy"></div>
+        <hr class="my-4">
         <h2 th:text="#{page.addCounter}">카운터 등록</h2>
     </div>
 
