--- a/jwgg/src/main/resources/templates/champs/champs.html
+++ b/jwgg/src/main/resources/templates/champs/champs.html
@@ -9,6 +9,8 @@
 
 <div class="container" style="max-width: 600px">
     <div class="py-5 text-center">
+        <div th:replace="fragment/header :: copy"></div>
+        <hr class="my-4">
         <h2 th:text="#{page.champs}">추천 챔피언 목록</h2>
     </div>
 
