--- a/jwgg/src/main/resources/templates/home.html
+++ b/jwgg/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container" style="max-width: 600px">
   <div class="py-5 text-center">
-    <h2>홈 화면</h2>
+    <div th:replace="fragment/header :: copy"></div>
   </div>
   <div class="row">
     <div class="col">
