--- a/jwgg/src/main/resources/templates/items/item.html
+++ b/jwgg/src/main/resources/templates/items/item.html
@@ -15,6 +15,8 @@
 <div class="container">
 
     <div class="py-5 text-center">
+        <div th:replace="fragment/header :: copy"></div>
+        <hr class="my-4">
         <h2 th:text="#{page.item}">상품 상세</h2>
     </div>
 
