--- a/jwgg/src/main/resources/templates/members/addMemberForm.html
+++ b/jwgg/src/main/resources/templates/members/addMemberForm.html
@@ -17,6 +17,8 @@
 <body>
 <div class="container">
   <div class="py-5 text-center">
+    <div th:replace="fragment/header :: copy"></div>
+    <hr class="my-4">
     <h2>회원 가입</h2>
   </div>
   <h4 class="mb-3">회원 정보 입력</h4>
