--- a/jwgg/src/main/resources/templates/members/addMemberForm.html
+++ b/jwgg/src/main/resources/templates/members/addMemberForm.html
@@ -41,7 +41,7 @@
       <div class="field-error" th:errors="*{password}" />
     </div>
     <div>
-      <label for="name">이름</label>
+      <label for="name">닉네임</label>
       <input type="text" id="name" th:field="*{name}" class="form-control"
              th:errorclass="field-error">
       <div class="field-error" th:errors="*{name}" />
